enable mouse support in example

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     // Init the swiper!
     var swiper = new Swiper(list_el, {
-      support_mouse: false // enable mouse swiping in the browser (experimental)
+      support_mouse: true // enable mouse swiping in the browser (experimental)
     });
     
 
