change get_closest_element to use viewport.clientWidth instead of offsetLeft of element to prevent webkit to bug

--- a/dev.html
+++ b/dev.html
@@ -5,7 +5,10 @@
   body {
     font-size: 150%;
   }
-  .swipes ul {-webkit-backface-visibility: hidden;}
+  .swipes ul li {
+    -webkit-perspective: 1000;
+    -webkit-backface-visibility: hidden;
+  }
   
   .swipes,
   .swipes ul,
@@ -23,31 +26,179 @@
 
 <div class="swipes">
   <ul id="my-list">
-    <li id="main-1" style="background-color: #999;">1</li>
+    <li id="main-1" style="background-color: #999;"><img src="http://placekitten.com/g/1000/1000" alt="" /></li>
     <li id="main-2" style="background-color: #666;">
-      2
+      
       <div class="swipes">
         <ul id="my-sub-swiper-list">
-          <li id="sub-1"><img src="img/1.jpg" alt="" /></li>
+          <li id="sub-1"><img src="http://placekitten.com/1000/1000" alt="" /></li>
           <li id="sub-2"><img src="img/2.jpg" alt="" /></li>
           <li id="sub-3"><img src="img/3.jpg" alt="" /></li>
         </ul>
       </div>
     </li>
-    <li id="main-3" style="background-color: #333;">3</li>
-    <li id="main-4" style="background-color: #111;">4</li>
+    <li id="main-3" style="background-color: #333;"><img src="http://placekitten.com/g/1000/1000" alt="" /></li>
+    <li id="main-4" style="background-color: gold;">
+      4
+      <div class="swipes">
+        <ul id="my-sub-swiper-list-2">
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li style="background-color: gold;">4.5</li>
+    <li id="main-5" style="background-color: #999;">
+      5
+      <div class="swipes">
+        <ul>
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li style="background-color: gold;">5.5
+      <li><img src="http://placekitten.com/1000/700" alt="" /></li>
+      </li>
+    <li id="main-6" style="background-color: #999;">6<div class="swipes">
+      <ul>
+        <li><img src="img/1.jpg" alt="" /></li>
+        <li><img src="img/2.jpg" alt="" /></li>
+        <li><img src="img/3.jpg" alt="" /></li>
+      </ul>
+    </div></li>
+    <li style="background-color: gold;">6.5</li>
+    <li id="main-7" style="background-color: #999;">7<div class="swipes">
+      <ul>
+        <li><img src="img/1.jpg" alt="" /></li>
+        <li><img src="img/2.jpg" alt="" /></li>
+        <li><img src="img/3.jpg" alt="" /></li>
+      </ul>
+    </div></li>
+    <li style="background-color: gold;">8</li>
+    <li>
+      <div class="swipes">
+        <ul>
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <div class="swipes">
+        <ul>
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <div class="swipes">
+        <ul>
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <div class="swipes">
+        <ul>
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <div class="swipes">
+        <ul>
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <div class="swipes">
+        <ul>
+          <li><img src="img/1.jpg" alt="" /></li>
+          <li><img src="img/2.jpg" alt="" /></li>
+          <li><img src="img/3.jpg" alt="" /></li>
+        </ul>
+      </div>
+    </li>
+    <li>
+      <div class="swipes">
+        <ul>
+          <li><img src="http://placekitten.com/1000/1000" alt="" /></li>
+          <li><img src="http://placekitten.com/600/500" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+          <li><img src="http://placekitten.com/700/300" alt="" /></li>
+
+        </ul>
+      </div>
+    </li>
+    <li><img src="http://placekitten.com/1100/1100" alt="" /></li>
+    <li><img src="http://placekitten.comg/g/1100/1100" alt="" /></li>
+    <li><img src="http://placekitten.com/1000/1500" alt="" /></li>
+    <li><img src="http://placekitten.comg/g/1000/1500" alt="" /></li>
+    <li>LAST!</li>
   </ul>
 </div>
 <script src="swiper.js?2"></script>
 <script>
-  // Init the swiper!
-  var swiper = new Swiper(document.getElementById("my-list"), {
-    support_mouse: true // enable mouse swiping in the browser (experimental)
-  });
   
-  // init sub swiper
-  var sub_swiper = new Swiper(document.getElementById("my-sub-swiper-list"), {
-    support_mouse: true
-  });
+  var els = document.querySelectorAll(".swipes > ul");
+  for (var i = 0; i < els.length; i++) {
+    console.log(i);
+    console.log(els[i]);
+    new Swiper(els[i], {
+      support_mouse: true // enable mouse swiping in the browser (experimental)
+    });
+  }
   
+
 </script>
