add comment on css webkit-perspective

--- a/dev.html
+++ b/dev.html
@@ -8,7 +8,9 @@
     font-size: 150%;
   }
   .swipes ul li {
-/*    -webkit-perspective: 1000;*/
+    
+    /* increase crashes a lot - especially on ipad 2 */
+    /*-webkit-perspective: 1000;*/
     -webkit-backface-visibility: hidden;
   }
   
